--- a/Sources/PositioningLibrary/CustomView/FloorMapView.xib
+++ b/Sources/PositioningLibrary/CustomView/FloorMapView.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -31,7 +30,7 @@
                 </mapView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fAF-Rn-rbV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="0Hs-Hg-rsp"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="kLt-cm-Oju" secondAttribute="trailing" id="9VV-CY-of5"/>
@@ -43,9 +42,4 @@
             <point key="canvasLocation" x="132" y="123"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
